# wine-cn-fonts

./: README.md  main.c  meson.build
cross/: linux-mingw-w64-64bit.txt
